--- a/src/components/CarItem/CarItem.module.css
+++ b/src/components/CarItem/CarItem.module.css
@@ -5,6 +5,7 @@
 }
 
 .imageWrap {
+  position: relative;
   width: 274px;
   height: 268px;
   margin-bottom: 14px;
@@ -63,6 +64,7 @@
 
 .button {
   display: block;
+  border: none;
   margin-top: 24px;
   padding: 12px 99.5px;
   color: #ffffff;
@@ -74,4 +76,17 @@
   border-radius: 12px;
   text-decoration: none;
   text-align: center;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: rgb(11, 68, 205);
+}
+
+.like {
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  width: 18px;
 }
