--- a/src/components/Favorites/Favorites.module.css
+++ b/src/components/Favorites/Favorites.module.css
@@ -18,3 +18,11 @@
   text-decoration-line: underline;
   cursor: pointer;
 }
+
+.emptyFavorites {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 24px;
+
+  text-align: center;
+}
