--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,17 @@
 @import-normalize; /* bring in normalize.css styles */
 
-/* :root {
-  --primary-color-white: #ffffff;
-  --primary-color-black: #2f2f2f;
-  --primary-color-blue: #407bff;
-  --secondary-color-red: #ef5050;
-  --secondary-color-orange: #ff9d43;
-  --secondary-color-blue-1: #ecf2ff;
-  --secondary-color-blue-2: #d7e3ff;
-  --secondary-color-blue-3: #9ebbff;
+:root {
+  --primary-color-white: rgb(255, 255, 255);
+  /* --primary-color-black: #2f2f2f; */
+  --primary-color-blue: rgb(52, 112, 255);
+  --secondary-color-blue: rgb(11, 68, 205);
+  --secondary-color-black: rgba(18, 20, 23, 0.5);
+  /* --secondary-color-blue-1: #ecf2ff; */
+  /* --secondary-color-blue-2: #d7e3ff; */
+  /* --secondary-color-blue-3: #9ebbff;  */
 
-  --backdrop-color-black: rgba(0, 0, 0, 0.8);
-  --backdrop-color-loader: rgba(255, 255, 255, 0.4);
-} */
+  --backdrop-color-black: rgba(255, 255, 255, 0.9);
+}
 
 * {
   box-sizing: border-box;
