--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -47,13 +47,13 @@
 .favoritesLink:hover,
 .tel:hover {
   color: var(--primary-color-white);
-  background-color: --secondary-color-blue;
+  background-color: var(--secondary-color-blue);
   border-radius: 12px;
   padding: 12px 50px;
 }
 
 .active {
-  color: var(--primary-color-white);
+  color: var();
   background-color: var(--primary-color-blue);
   border-radius: 12px;
   padding: 12px 50px;
