--- a/src/components/CarItem/CarItem.module.css
+++ b/src/components/CarItem/CarItem.module.css
@@ -30,7 +30,6 @@
 
   font-size: 16px;
   font-weight: 500;
-  line-height: 24px;
   color: rgb(18, 20, 23);
 }
 
@@ -45,7 +44,6 @@
 
   color: var(--secondary-color-black);
   font-size: 12px;
-  line-height: 18px;
 
   white-space: nowrap;
   overflow: hidden;
@@ -70,16 +68,13 @@
   color: var(--primary-color-white);
   background-color: var(--primary-color-blue);
 
-  /* font-family: "Manrope"; */
   font-size: 14px;
-  line-height: 20px;
+  line-height: 1.43;
   font-weight: 600;
 
   border-radius: 12px;
   text-decoration: none;
   text-align: center;
-  cursor: pointer;
-  transition: background-color 0.3s;
 }
 
 .button:hover {
