--- a/src/components/CarLIst/CarList.module.css
+++ b/src/components/CarLIst/CarList.module.css
@@ -5,16 +5,18 @@
 }
 
 .LoadMoreBtn {
-  display: block;
-  color: rgb(52, 112, 255);
-  background-color: transparent;
-  border: none;
   margin: 0 auto;
   margin-top: 100px;
 
   font-size: 16px;
   font-weight: 500;
-  line-height: 24px;
   text-decoration-line: underline;
   cursor: pointer;
+
+  color: var(--primary-color-blue);
+  background-color: transparent;
+}
+
+.LoadMoreBtn:hover {
+  color: var(--secondary-color-blue);
 }
