--- a/src/components/MenuModal/MenuModal.module.css
+++ b/src/components/MenuModal/MenuModal.module.css
@@ -5,15 +5,14 @@
   height: 272px;
   left: 0px;
   top: 52px;
-
-  border: 1px solid rgba(18, 20, 23, 0.05);
-  border-radius: 14px;
-
-  box-shadow: 0px 4px 36px 0px rgba(0, 0, 0, 0.02);
-  background: rgb(255, 255, 255);
   padding: 14px 18px;
   overflow-y: scroll;
   z-index: 100;
+
+  border: 1px solid var(--secondary-color-black);
+  border-radius: 14px;
+  box-shadow: 0px 4px 36px 0px rgba(0, 0, 0, 0.02);
+  background: var(--primary-color-white);
 }
 
 .dropdownPrice {
@@ -24,7 +23,7 @@
   color: rgba(18, 20, 23, 0.2);
   font-size: 16px;
   font-weight: 500;
-  line-height: 20px;
+  line-height: 1.25;
   margin-bottom: 8px;
   cursor: pointer;
 }
