--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -121,6 +121,7 @@
 }
 
 .text {
+  font-family: Montserrat;
   font-size: 12px;
   font-weight: 600;
   letter-spacing: -2%;
@@ -140,6 +141,20 @@
   background: var(--primary-color-white);
   color: rgb(54, 53, 53);
 
+  font-size: 12px;
+  font-weight: 600;
+  letter-spacing: -2%;
+}
+
+.conditionBtnText {
+  display: block;
+  border-radius: 35px;
+  padding: 7px 14px;
+
+  background: var(--primary-color-white);
+  color: rgb(54, 53, 53);
+
+  font-family: Montserrat;
   font-size: 12px;
   font-weight: 600;
   letter-spacing: -2%;
