--- a/src/components/MenuModal/MenuModal.module.css
+++ b/src/components/MenuModal/MenuModal.module.css
@@ -9,10 +9,11 @@
   overflow-y: scroll;
   z-index: 100;
 
-  border: 1px solid var(--secondary-color-black);
+  border: 1px solid rgba(18, 20, 23, 0.05);
   border-radius: 14px;
   box-shadow: 0px 4px 36px 0px rgba(0, 0, 0, 0.02);
   background: var(--primary-color-white);
+  outline: none;
 }
 
 .dropdownPrice {
