--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,25 @@ body {
   line-height: 1.5;
 }
 
+::-webkit-scrollbar {
+  position: absolute;
+  background-color: transparent;
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  border: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(18, 20, 23, 0.05);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(18, 20, 23, 0.15);
+}
+
 h1,
 h2,
 h3,
