--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,3 +1,15 @@
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: auto;
+
+  background-color: var(--secondary-color-black);
+  z-index: 200;
+}
+
 .spinnerWrapper {
   position: relative;
   left: 50%;
