--- a/src/components/MenuModal/MenuModal.module.css
+++ b/src/components/MenuModal/MenuModal.module.css
@@ -1,11 +1,12 @@
 .dropdownBrand,
 .dropdownPrice {
   position: absolute;
+  display: flex;
   width: 224px;
   height: 272px;
   left: 0px;
   top: 52px;
-  padding: 14px 18px;
+  padding: 14px 0px 14px 18px;
   overflow-y: scroll;
   z-index: 100;
 
@@ -31,4 +32,16 @@
 
 .item:last-child {
   margin-bottom: 0px;
+}
+
+.container {
+  width: calc(125px - 18px);
+  overflow-y: auto;
+  padding: 0;
+}
+
+.containerBrand {
+  width: calc(224px - 18px);
+  overflow-y: auto;
+  padding: 0;
 }
