--- a/src/components/CarItem/CarItem.module.css
+++ b/src/components/CarItem/CarItem.module.css
@@ -6,6 +6,11 @@
   margin: 0;
 }
 
+.wraper {
+  display: flex;
+  flex-direction: column;
+}
+
 .imageWrap {
   position: relative;
   width: 274px;
