--- a/src/components/CarItem/CarItem.module.css
+++ b/src/components/CarItem/CarItem.module.css
@@ -2,8 +2,28 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 274px;
+  width: 290px;
   margin: 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 230px;
+    margin: 0;
+  }
+}
+
+@media only screen and (min-width: 1214px) {
+  .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 274px;
+    margin: 0;
+  }
 }
 
 .wraper {
@@ -13,9 +33,21 @@
 
 .imageWrap {
   position: relative;
-  width: 274px;
+  width: 290px;
   height: 268px;
   margin-bottom: 14px;
+}
+
+@media only screen and (min-width: 768px) {
+  .imageWrap {
+    width: 230px;
+  }
+}
+
+@media only screen and (min-width: 1214px) {
+  .imageWrap {
+    width: 268px;
+  }
 }
 
 .image {
@@ -76,6 +108,18 @@
   border-radius: 12px;
   text-decoration: none;
   text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+  .button {
+    padding: 12px 50px;
+  }
+}
+
+@media only screen and (min-width: 1214px) {
+  .button {
+    padding: 12px 99.5px;
+  }
 }
 
 .button:hover {
