--- a/src/components/CarLIst/CarList.module.css
+++ b/src/components/CarLIst/CarList.module.css
@@ -4,6 +4,22 @@
   flex-wrap: wrap;
 }
 
+@media only screen and (min-width: 768px) {
+  .wrap {
+    display: flex;
+    gap: 24px;
+    flex-wrap: wrap;
+  }
+}
+
+@media only screen and (min-width: 1214px) {
+  .wrap {
+    display: flex;
+    gap: 29px;
+    flex-wrap: wrap;
+  }
+}
+
 .LoadMoreBtn {
   margin: 0 auto;
   margin-top: 100px;
