--- a/src/components/Favorites/Favorites.module.css
+++ b/src/components/Favorites/Favorites.module.css
@@ -1,7 +1,19 @@
 .wrap {
   display: flex;
-  gap: 29px;
   flex-wrap: wrap;
+  gap: 29px;
+}
+
+@media only screen and (min-width: 768px) {
+  .wrap {
+    gap: 24px;
+  }
+}
+
+@media only screen and (min-width: 1214px) {
+  .wrap {
+    gap: 29px;
+  }
 }
 
 .emptyFavorites {
