--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,11 +1,28 @@
+.iconFilter {
+  display: block;
+  margin-bottom: 20px;
+}
+
+@media only screen and (min-width: 768px) {
+  .iconFilter {
+    display: none;
+  }
+}
+
 .form {
-  display: flex;
-  align-items: flex-end;
-  gap: 18px;
-  width: 859px;
-  margin: 0 auto;
-  margin-bottom: 50px;
-  justify-content: center;
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .form {
+    display: flex;
+    align-items: flex-end;
+    gap: 18px;
+
+    margin: 0 auto;
+    margin-bottom: 50px;
+    justify-content: center;
+  }
 }
 
 .label {
@@ -37,6 +54,26 @@
   font-weight: 600;
 }
 
+@media only screen and (min-width: 768px) {
+  .button {
+    height: 48px;
+    padding: 14px 25px;
+    border-radius: 12px;
+
+    background: var(--primary-color-blue);
+    color: var(--primary-color-white);
+
+    font-size: 14px;
+    font-weight: 600;
+  }
+}
+
+@media only screen and (min-width: 1214px) {
+  .button {
+    padding: 14px 44px;
+  }
+}
+
 .button:hover {
   background-color: var(--secondary-color-blue);
 }
@@ -63,10 +100,40 @@ input {
   padding: 14px 89px 14px 18px;
 }
 
+@media only screen and (min-width: 768px) {
+  .inputBrand {
+    width: 160px;
+    padding: 14px 14px 14px 18px;
+  }
+}
+
+@media only screen and (min-width: 1214px) {
+  .inputBrand {
+    width: 224px;
+    padding: 14px 89px 14px 18px;
+  }
+}
+
 .inputPrice {
   border-radius: 14px;
   width: 125px;
   padding: 14px 18px;
+}
+
+@media only screen and (min-width: 768px) {
+  .inputPrice {
+    border-radius: 14px;
+    width: 100px;
+    padding: 14px 18px;
+  }
+}
+
+@media only screen and (min-width: 1214px) {
+  .inputPrice {
+    border-radius: 14px;
+    width: 125px;
+    padding: 14px 18px;
+  }
 }
 
 .inputFrom {
@@ -77,11 +144,44 @@ input {
   padding: 14px 24px 14px 75px;
 }
 
+@media only screen and (min-width: 768px) {
+  .inputFrom {
+    border-right: 1px solid rgba(138, 138, 137, 0.2);
+    border-radius: 14px 0px 0px 14px;
+    background: var(--secondary-color-grey);
+    width: 130px;
+    padding: 14px 14px 14px 65px;
+  }
+}
+
+@media only screen and (min-width: 1218px) {
+  .inputFrom {
+    width: 160px;
+    padding: 14px 24px 14px 75px;
+  }
+}
+
 .inputTo {
   width: 160px;
   border-radius: 0px 14px 14px 0px;
   background: rgb(247, 247, 251);
   padding: 14px 24px 14px 53px;
+}
+
+@media only screen and (min-width: 768px) {
+  .inputTo {
+    width: 110px;
+    border-radius: 0px 14px 14px 0px;
+    background: rgb(247, 247, 251);
+    padding: 14px 14px 14px 40px;
+  }
+}
+
+@media only screen and (min-width: 1218px) {
+  .inputTo {
+    width: 160px;
+    padding: 14px 24px 14px 53px;
+  }
 }
 
 input::placeholder {
@@ -111,6 +211,34 @@ input::placeholder {
   font-size: 18px;
   font-weight: 500;
   line-height: 1.11;
+}
+
+@media only screen and (min-width: 768px) {
+  .upperLabel {
+    position: absolute;
+    top: 14px;
+    left: 15px;
+
+    color: var(--primary-color-black);
+
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.11;
+  }
+}
+
+@media only screen and (min-width: 1214px) {
+  .upperLabel {
+    position: absolute;
+    top: 14px;
+    left: 24px;
+
+    color: var(--primary-color-black);
+
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.11;
+  }
 }
 
 .inputLabelWrap {
