--- a/src/components/MenuModal/MenuModal.module.css
+++ b/src/components/MenuModal/MenuModal.module.css
@@ -21,6 +21,41 @@
   width: 125px;
 }
 
+@media only screen and (min-width: 768px) {
+  .dropdownBrand,
+  .dropdownPrice {
+    position: absolute;
+    display: flex;
+    width: 160px;
+    height: 272px;
+    left: 0px;
+    top: 52px;
+    padding: 14px 0px 14px 18px;
+    overflow-y: scroll;
+    z-index: 100;
+
+    border: 1px solid rgba(18, 20, 23, 0.05);
+    border-radius: 14px;
+    box-shadow: 0px 4px 36px 0px rgba(0, 0, 0, 0.02);
+    background: var(--primary-color-white);
+    outline: none;
+  }
+
+  .dropdownPrice {
+    width: 100px;
+  }
+}
+
+@media only screen and (min-width: 1214px) {
+  .dropdownBrand {
+    width: 224px;
+  }
+
+  .dropdownPrice {
+    width: 125px;
+  }
+}
+
 .item {
   color: rgba(18, 20, 23, 0.2);
   font-size: 16px;
