--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -55,6 +55,7 @@
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: flex-start;
+  gap: 4px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -62,6 +63,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 10px;
   }
 }
 
@@ -84,6 +86,8 @@
   flex-wrap: nowrap;
   align-items: center;
   width: 170px;
+  padding: 12px 0;
+  gap: 4px;
 
   background-color: var(--primary-color-white);
   box-shadow: 0px 4px 36px 0px rgba(0, 0, 0, 0.02);
@@ -102,6 +106,10 @@
   height: 36px;
   cursor: pointer;
   margin-left: 10px;
+}
+
+.burger:hover {
+  stroke: var(--secondary-color-blue);
 }
 
 @media only screen and (min-width: 768px) {
@@ -145,12 +153,6 @@
 
   .mainLink,
   .catalogLink,
-  .favoritesLink {
-    margin-right: 10px;
-  }
-
-  .mainLink,
-  .catalogLink,
   .favoritesLink,
   .tel {
     font-size: 16px;
@@ -167,6 +169,7 @@
   .tel {
     display: flex;
     flex-wrap: nowrap;
+    margin-left: 10px;
   }
 
   .mainLink:hover,
