--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -27,11 +27,18 @@
 
   background: var(--primary-color-white);
   z-index: 300;
+  width: calc(320px - 30px);
+}
+
+@media only screen and (min-width: 768px) {
+  .modal {
+    width: 541px;
+  }
 }
 
 .button {
   display: block;
-  width: 168px;
+  width: 100%;
   border-radius: 12px;
 
   background: var(--primary-color-blue);
@@ -43,6 +50,13 @@
   padding: 12px 50px 12px 50px;
   transition: background-color 0.3s;
   cursor: pointer;
+  text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+  .button {
+    width: 168px;
+  }
 }
 
 .button:hover {
@@ -118,6 +132,7 @@
   gap: 8px;
   margin-bottom: 8px;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .text {
