fix scroll to top

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   --secondary-color-blue: rgb(11, 68, 205);
   --secondary-color-black: rgba(18, 20, 23, 0.5);
   --secondary-color-grey: rgb(247, 247, 251);
+  --secondary-color-blue-shadow: rgba(52, 112, 255, 0.7);
 
   --backdrop-color-white: rgba(255, 255, 255, 0.9);
 }
