--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -37,7 +37,7 @@
 
   background-color: var(--primary-color-white);
   box-shadow: 0px 4px 36px 0px rgba(0, 0, 0, 0.02);
-  border: 1px solid rgba(18, 20, 23, 0.05);
+  border: 1px solid rgba(18, 20, 23, 0.5);
   border-radius: 14px;
 
   padding: 12px;
@@ -74,6 +74,13 @@
 .labelwrap {
   display: flex;
   flex-direction: column;
+  margin-bottom: 12px;
+}
+
+@media only screen and (min-width: 768px) {
+  .labelwrap {
+    margin-bottom: 0;
+  }
 }
 
 .inputwrap {
@@ -160,7 +167,6 @@ input {
   border-radius: 14px;
   width: 264px;
   padding: 14px 89px 14px 18px;
-  margin-bottom: 12px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -182,7 +188,6 @@ input {
   border-radius: 14px;
   width: 264px;
   padding: 14px 18px;
-  margin-bottom: 12px;
 }
 
 @media only screen and (min-width: 768px) {
