--- a/src/components/MenuModal/MenuModal.module.css
+++ b/src/components/MenuModal/MenuModal.module.css
@@ -2,7 +2,7 @@
 .dropdownPrice {
   position: absolute;
   display: flex;
-  width: 224px;
+  width: 264px;
   height: 272px;
   left: 0px;
   top: 52px;
@@ -15,10 +15,6 @@
   box-shadow: 0px 4px 36px 0px rgba(0, 0, 0, 0.02);
   background: var(--primary-color-white);
   outline: none;
-}
-
-.dropdownPrice {
-  width: 125px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -70,13 +66,45 @@
 }
 
 .container {
-  width: calc(125px - 18px);
+  width: 234px;
   overflow-y: auto;
   padding: 0;
 }
 
+@media only screen and (min-width: 768px) {
+  .container {
+    width: calc(125px - 18px);
+    overflow-y: auto;
+    padding: 0;
+  }
+}
+
+@media only screen and (min-width: 1214px) {
+  .container {
+    width: calc(125px - 18px);
+    overflow-y: auto;
+    padding: 0;
+  }
+}
+
 .containerBrand {
-  width: calc(224px - 18px);
+  width: 234px;
   overflow-y: auto;
   padding: 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .containerBrand {
+    width: calc(224px - 18px);
+    overflow-y: auto;
+    padding: 0;
+  }
+}
+
+@media only screen and (min-width: 1214px) {
+  .containerBrand {
+    width: calc(224px - 18px);
+    overflow-y: auto;
+    padding: 0;
+  }
 }
