--- a/src/components/ScrollToTopButton/ScrollToTopButton.module.css
+++ b/src/components/ScrollToTopButton/ScrollToTopButton.module.css
@@ -4,22 +4,27 @@
   right: 20px;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
+  border-radius: 50%;
+  background-color: var(--primary-color-black);
+  width: 36px;
+  height: 36px;
+  border: none;
 }
 
 .scroll.visible {
   opacity: 1;
+  z-index: 300;
 }
 
-.scroll button {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 50%;
-  padding: 10px;
+.IconScroll {
+  fill: var(--primary-color-blue);
+  width: 36px;
+  height: 36px;
   cursor: pointer;
-  font-size: 16px;
+  box-shadow: 0px 4px 40px 0px var(--secondary-color-blue-shadow);
+  border-radius: 50%;
 }
 
-.scroll button:hover {
-  background-color: #0056b3;
+.IconScroll:hover {
+  fill: var(--secondary-color-blue);
 }
