--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -101,6 +101,13 @@
   }
 }
 
+.burgerWrap {
+  display: block;
+  width: 36px;
+  height: 36px;
+  margin-left: 10px;
+}
+
 .burger {
   width: 36px;
   height: 36px;
